FTEQ-8 Alignment of client modal now fixed (#3)

--- a/src/app/modals/client-details/client-details.modal.scss
+++ b/src/app/modals/client-details/client-details.modal.scss
@@ -33,10 +33,13 @@
   padding: 5px;
   align-items: center;
   height: 25px;
+  margin-left: -10px;
 }
 
 .form-line-title {
   width: 40%;
+  max-width: 130px;
+  padding-left: 6%;
 }
 
 .button-container {
@@ -66,10 +69,12 @@
 }
 
 input {
-  width: 172px;
   border: none;
   height: 25px;
   padding-left: 5px;
+  display: flex;
+  flex-grow: 1;
+  margin-right: 3%;
 }
 
 .date-input {
